fixed layout bug related to duplicate class name

--- a/rmt/src/main/webapp/static/css/main.css
+++ b/rmt/src/main/webapp/static/css/main.css
@@ -959,7 +959,7 @@ textarea.input-xlarge, input.input-xlarge, .recipient-list-panel {
 /*************************************************************************
     Lineup
 **************************************************************************/
-.invitee-list-panel {
+.lineup-invitee-list-panel {
     ul {
         margin-top: 5px;
         margin-bottom: 10px;
